@@ -1,19 +1,23 @@
 package com.example.backend.global.config;
 
+import java.io.PrintWriter;
 import java.util.Arrays;
-import java.util.List;
+import java.util.Collections;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpStatus;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configuration.WebSecurityCustomizer;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
+import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-import org.springframework.security.web.header.writers.frameoptions.XFrameOptionsHeaderWriter;
-import org.springframework.security.web.util.matcher.AntPathRequestMatcher;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import com.example.backend.global.rs.ErrorRs;
 import com.example.backend.global.rs.RsData;
 import com.example.backend.global.util.Ut;
 import com.example.backend.identity.security.filter.JwtAuthenticationFilter;
@@ -33,6 +37,8 @@ import lombok.RequiredArgsConstructor;
 @RequiredArgsConstructor
 public class SecurityConfig {
 	private final JwtAuthenticationFilter jwtAuthenticationFilter;
+	// private final CumstomOAuth2UserService oAuth2UserService;
+	// private final BearToke
 
 	/**
 	 *
@@ -46,6 +52,13 @@ public class SecurityConfig {
 	@Bean
 	SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
 		http
+
+			.csrf(AbstractHttpConfigurer::disable)		// CSRF 인증 방식 disable
+			.cors(cors->corsConfigurationSource())
+			// .oauth2Login(oauth ->
+			// 	oauth.userInfoEndpoint(c -> c.userService(oAuth2UserService))
+			// 		.successHandler(oAuth2SuccessHandler)
+			// )
 			.authorizeHttpRequests((authorizeHttpRequests) ->
 				authorizeHttpRequests
 					.requestMatchers("/h2-console/**")
@@ -55,56 +68,55 @@ public class SecurityConfig {
 					.anyRequest()
 					.authenticated()
 			)
-			.csrf((csrf) -> csrf.disable())
-			.headers((headers) ->
-				headers.addHeaderWriter(
-					new XFrameOptionsHeaderWriter(XFrameOptionsHeaderWriter.XFrameOptionsMode.SAMEORIGIN)))
-			.headers(
-				headers ->
-					headers.frameOptions(
-						frameOptions ->
-							frameOptions.sameOrigin()
-					)
-			)
-			.csrf(
-				csrf ->
-					csrf.disable()
-			)
-			.cors(
-				cors->corsConfigurationSource()
-			)
-			.addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
-			// .exceptionHandling(
-			// 	exceptionHandling -> exceptionHandling
-			// 		.authenticationEntryPoint(
-			// 			(request, response, authException) -> {
-			// 				response.setContentType("application/json;charset=UTF-8");
-			//
-			// 				response.setStatus(401);
-			// 				response.getWriter().write(
-			// 					Ut.json.toString(
-			// 						// new RsData("401-1", "사용자 인증정보가 올바르지 않습니다.")
-			// 						RsData.error(
-			// 							"사용자 인증정보가 올바르지 않습니다.")
-			// 					)
-			// 				);
-			// 			}
-			// 		)
-			// 		.accessDeniedHandler(
-			// 			(request, response, accessDeniedException) -> {
-			// 				response.setContentType("application/json;charset=UTF-8");
-			//
-			// 				response.setStatus(403);
-			// 				response.getWriter().write(
-			// 					Ut.json.toString(
-			// 						// new RsData("403-1", "권한이 없습니다.")
-			// 						RsData.error(null, "권한이 없습니다.")
-			// 					)
-			// 				);
-			// 			}
-			// 		)
-			// );
+			.httpBasic(AbstractHttpConfigurer::disable) // Http Basic 인증 방식 disable
+			.formLogin(AbstractHttpConfigurer::disable)
+			.sessionManagement(session-> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)) // jwt 방식이므로 세션 x
+			.addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
+			.exceptionHandling(
+				exceptionHandling -> exceptionHandling
+					.authenticationEntryPoint(
+						(request, response, authException) -> {
+							response.setStatus(HttpStatus.UNAUTHORIZED.value());
+							response.setContentType("application/json;charset=UTF-8");
 
+							String str = Ut.json.toString(
+								RsData.error(
+									ErrorRs.builder()
+										.target(request.getRequestURI())
+										.code(401)
+										.message("사용자 인증정보가 올바르지 않습니다.")
+										.build()
+								)
+							);
+
+							PrintWriter writer = response.getWriter();
+							writer.write(str);
+							writer.flush();
+							writer.close();
+						}
+					)
+					.accessDeniedHandler(
+						(request, response, accessDeniedException) -> {
+							response.setStatus(HttpStatus.FORBIDDEN.value());
+							response.setContentType("application/json;charset=UTF-8");
+
+							String str = Ut.json.toString(
+								RsData.error(
+									ErrorRs.builder()
+										.target(request.getRequestURI())
+										.code(403)
+										.message("해당 리소스에 권한이 없습니다.")
+										.build()
+								)
+							);
+
+							PrintWriter writer = response.getWriter();
+							writer.write(str);
+							writer.flush();
+							writer.close();
+						}
+					)
+			);
 		return http.build();
 	}
 
@@ -113,16 +125,25 @@ public class SecurityConfig {
 		CorsConfiguration configuration = new CorsConfiguration();
 		// 허용할 오리진 설정
 		configuration.setAllowedOrigins(
-			Arrays.asList(AppConfig.getSiteFrontUrl(), "http://localhost:8080"));
+			Arrays.asList(AppConfig.getSiteFrontUrl(), "http://localhost:3000")); // 프론트 엔드 포트번호
 		// 허용할 HTTP 메서드 설정
-		configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE"));
+		configuration.setAllowedMethods(Collections.singletonList("*"));//Arrays.asList("GET", "POST", "PUT", "DELETE"));
 		// 자격 증명 허용 설정
 		configuration.setAllowCredentials(true);
 		// 허용할 헤더 설정
-		configuration.setAllowedHeaders(List.of("*"));
+		configuration.setAllowedHeaders(Collections.singletonList("*"));
+
+		configuration.setExposedHeaders(Collections.singletonList("Authorization")); // client가 Authorization 헤더를 읽을 수 있도록 해야한다.
 		// CORS 설정을 소스에 등록
 		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
 		source.registerCorsConfiguration("/**", configuration);
 		return source;
+	}
+
+	@Bean
+	public WebSecurityCustomizer webSecurityCustomizer() { // security를 적용하지 않을 리소스
+		return web -> web.ignoring()
+			// error endpoint를 열어줘야 함, favicon.ico 추가!
+			.requestMatchers("/error", "/favicon.ico");
 	}
 }
